docker set up back,front

--- a/backend/.env
+++ b/backend/.env
@@ -2,6 +2,10 @@
 # API_KEY = "qklvqc60dpmakafoo7v8an89eeuq9kbj"
 
 
-API_BASE_URL = "https://wpms.moe.gov.kh/api/wqs?offset=0&max=10&order=desc&fromDate=2025-07-31T17:00:00.000Z&code=E4:65:B8:29:76:58&toDate=2025-08-30T17:00:00.000Z"
+API_BASE_URL = "    "
 BEARER_TOKEN = "qklvqc60dpmakafoo7v8an89eeuq9kbj"
 API_KEY = "1ccbc4913db4e7850a2de444aa0d6"
+
+
+FACTORY_DATA_PATH="/data/data.json"
+SENSOR_DATA_PATH="/data/data1.json"
