--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -8,7 +8,7 @@ WORKDIR /app
 COPY requirements.txt .
 
 # Install dependencies
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --default-timeout=100 -r requirements.txt
 
 
 # Expose FastAPI port
